Refactor code structure for improved readability and maintainability

--- a/assets/scss/theme/_theme.scss
+++ b/assets/scss/theme/_theme.scss
@@ -1,7 +1,7 @@
 @use '../utils' as *;
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Agntix - Digital Agency & Creative Portfolio HTML Template
+    Template Name: 9Yards - Content House
     Author: Theme_Pure
     Support: https://help.themepure.net/support/
     Description: Template
