--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Agntix - Digital Agency & Creative Portfolio HTML Template
+    Template Name: 9Yards - Content House
     Author: Theme_Pure
     Support: https://help.themepure.net/support/
     Description: Template
@@ -2664,7 +2664,7 @@ input[type=color] {
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  background: #E6411C;
+  background: var(--tp-common-black);
   animation: preloader 1.3s linear infinite;
   -webkit-animation: preloader 1.3s linear infinite;
 }
