--- a/assets/scss/components/_section-title.scss
+++ b/assets/scss/components/_section-title.scss
@@ -386,7 +386,7 @@
             line-height: 1;
             letter-spacing: -0.03em;
             color: var(--tp-common-black);
-            font-family: var(--tp-ff-grotesk);
+            font-family: var(--tp-ff-heading);
             @media #{$xl}{
                 font-size: 55px;
             }
