--- a/assets/scss/layout/pages/_about.scss
+++ b/assets/scss/layout/pages/_about.scss
@@ -462,7 +462,7 @@
             margin-bottom: 0;
             letter-spacing: -0.04em;
             color: var(--tp-common-black);
-            font-family: var(--tp-ff-grotesk);
+            font-family: var(--tp-ff-heading);
         }
         & span{
             font-weight: 400;
