--- a/assets/scss/layout/pages/_brand.scss
+++ b/assets/scss/layout/pages/_brand.scss
@@ -42,7 +42,7 @@
         line-height: 1;
         letter-spacing: -0.02em;
         color: var(--tp-common-black);
-        font-family: var(--tp-ff-grotesk);
+        font-family: var(--tp-ff-heading);
         &::after {
             content: '';
             height: 8px;
