--- a/assets/scss/layout/pages/_price.scss
+++ b/assets/scss/layout/pages/_price.scss
@@ -432,7 +432,7 @@
             }
             & .crp-price-head {
                 & h4{
-                    font-family: var(--tp-ff-grotesk);
+                    font-family: var(--tp-ff-heading);
                 }
             }
         }
