--- a/assets/scss/layout/footer/_footer-2.scss
+++ b/assets/scss/layout/footer/_footer-2.scss
@@ -44,7 +44,7 @@
             font-size: 24px;
             margin-bottom: 25px;
             color: var(--tp-common-white);
-            font-family: var(--tp-ff-grotesk);
+            font-family: var(--tp-ff-heading);
         }
         &-menu{
             & ul{
