--- a/assets/scss/layout/pages/_project.scss
+++ b/assets/scss/layout/pages/_project.scss
@@ -351,7 +351,7 @@
         margin-bottom: 0px;
         letter-spacing: -0.04em;
         color: var(--tp-common-white);
-        font-family: var(--tp-ff-grotesk);
+        font-family: var(--tp-ff-heading);
         @media #{$xs}{
             font-size: 35px;
         }
