--- a/assets/scss/layout/pages/_step.scss
+++ b/assets/scss/layout/pages/_step.scss
@@ -11,7 +11,7 @@
         line-height: 1;
         letter-spacing: -0.04em;
         color: var(--tp-common-black);
-        font-family: var(--tp-ff-grotesk);
+        font-family: var(--tp-ff-heading);
         &-sm{
             font-weight: 700;
             font-size: 24px;
@@ -19,7 +19,7 @@
             margin-bottom: 15px;
             letter-spacing: -0.02em;
             color: var(--tp-common-black); 
-            font-family: var(--tp-ff-grotesk);
+            font-family: var(--tp-ff-heading);
         }
     }
     &-item{
