--- a/assets/scss/layout/pages/_team.scss
+++ b/assets/scss/layout/pages/_team.scss
@@ -122,7 +122,7 @@
         margin-bottom: 0;
         letter-spacing: -0.01em;
         color: var(--tp-common-black);
-        font-family: var(--tp-ff-grotesk);
+        font-family: var(--tp-ff-heading);
     }
     &-content{
         & span{
