--- a/assets/scss/layout/pages/_testimonial.scss
+++ b/assets/scss/layout/pages/_testimonial.scss
@@ -216,7 +216,7 @@
             line-height: 1.56;
             letter-spacing: -0.02em;
             color: var(--tp-common-black);
-            font-family: var(--tp-ff-grotesk);
+            font-family: var(--tp-ff-heading);
         }
     }
     &-author{
@@ -241,7 +241,7 @@
             margin-bottom: 5px;
             letter-spacing: -0.02em;
             color: var(--tp-common-black);
-            font-family: var(--tp-ff-grotesk);
+            font-family: var(--tp-ff-heading);
         }
         &-info{
             line-height: 1;
